--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.9.0",
+    "react-loader-spinner": "^5.3.4",
     "react-router-dom": "^6.13.0",
     "react-scripts": "5.0.1",
     "react-top-loading-bar": "^2.3.1",
